2019-09-02 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c,
	  support/regression/tests/nadd.c:
	  Use nadd in subtraction for pdk15.

2019-08-22 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/pdk.src/glob.cc,
	  sim/ucsim/pdk.src/inst.cc,
	  sim/ucsim/pdk.src/instcl.h,
	  sim/ucsim/pdk.src/pdk.cc,
	  sim/ucsim/pdk.src/pdkcl.h,
	  sim/ucsim/pdk.src/regspdk.h:
	  pdk13 I/O fix (patch #305 by Serge Rabyking).
	  .version:
	  Bump version for all the pdk13 fixes we got so far.
	* src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  Improve unsigned char right shift by literal (also part of RFE #639).

2019-08-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve wide ==, !=, part of RFE #641.

2019-08-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc,
	  support/regression/test/bug-2929.c:
	  Fix bug #2929.

2019-08-17 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/strdup.c:
	  Fix strdup buffer overflow (patch #306).

2019-08-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Improve ~ register allocation (RFE #638).

2019-08-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/peeph-z80.def,
	  src/z80/peeph-tlcs90.def,
	  src/z80/peeph-r2k.def:
	  Improve caching of zero on pointer write.

2019-08-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve assignment.
	* device/include/string.h,
	  device/lib/strdup.c,
	  device/lib/strndup.c,
	  device/lib/incl.mk:
	  Implement C2X string duplication functions.

2019-08-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c:
	  Improve notUsed() precision, alternative to patch from z88dk fork.
	* src/stm8/*.def:
	  Add rule from patch #304.
	* src/z80/gen.c:
	  Improve load of hl.

2019-08-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peep.c,
	  src/stm8/peeph.def:
	  stm8 peephole optimization improvements, mostly picked from patch #290.